tests/negative/array/array_invalid_access.tx
// EXPECTED: COMPILE_ERROR
// Description: Test accessing non-existent properties on an array.

function main() {
    let arr = [1, 2, 3];
    print(arr.nonExistentProperty);
    arr.unknownMethod();
}
